Fix percent flash by adding overflow visible.

--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -109,6 +109,7 @@ div.image-file-input-wrapper > .progress {
   text-align: center;
   display: none;
   z-index: 3;
+  overflow: visible !important;
 }
 
 div.image-file-input-wrapper.busy > .progress {
